k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inamute
  labels:
    app: inamute
