k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inamute
  namespace: inamute
  labels:
    app: inamute
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: inamute
