k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inamute
  namespace: inamute
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: inamute.mris.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inamute
                port:
                  number: 8080
  tls:
    - hosts:
        - inamute.mris.dev
      secretName: inamute-tls
